[package]
name = "rust_render_101"
version = "0.1.0"
edition = "2021"
authors = ["Arthur Dugnolle arthur.dugnolle@gmail.com"]
license = "MIT"
repository = "https://www.github.com/ArthurDgl/rust-render-101.git"
include = [
    "src/lib.rs",
    "Cargo.toml",
    "LICENSE.txt",
    "README.md",
]

[dependencies]
minifb = "0.27.0"
image = "0.25.4"
rand = "0.9.0-alpha.2"
